# simple-grep-hs

./: CHANGELOG.md  LICENSE  flake.nix  project.nix  simple-grep.cabal
app/: Main.hs
src/: NotSoSimpleGenericParser.hs
